--- a/HTML/HTML.html
+++ b/HTML/HTML.html
@@ -20,7 +20,7 @@
 	  <p>Родина:<i>Суздальское княжество село Вознесенск</i></p>
       <p>Уровень:<i>19</i></p>
 	  <p>Класс:<i>адепт Pascal</i></p>
-	  <div>Интелект:<i style="color:yellow">7/10</i></div>
+	  <div>Интеллект:<i style="color:yellow">7/10</i></div>
 	  <div>Сила:<i style="color:red">5/10</i></div>
 	  <div>Выносливость:<i style="color:green">3/10</i></div>
 	  <div>Магия:<i  style="color:blue">7/10</i></div>
