--- a/HTML/HTML.html
+++ b/HTML/HTML.html
@@ -13,17 +13,15 @@
 		</style>
     </head>
     <body>
-
 	<h1>Данные</h1>
-
 <div>ФИО:<i>Русанов Константин Игоревич</i></div>
-
 <div>
       <p>Расса:<i>Человек</i></p>
 	  <p>Родина:<i>Суздальское княжество село Вознесенск</i></p>
       <p>Уровень:<i>19</i></p>
 	  <img src="Паладин.png" style="float:right; margin-right:1150px;" width="600" alt="Паладин" />
 	  <p>Класс:<i>адепт Pascal</i></p>
+	  <div><b>Характеристики</b></div>
 	  <div>Интеллект:<i style="color:yellow">7/10</i></div>
 	  <div>Сила:<i style="color:red">5/10</i></div>
 	  <div>Выносливость:<i style="color:green">3/10</i></div>
